@@ -167,6 +167,9 @@ string SPIPlugin::Description() const {
 "<device>-<port>-dmx-address = <int>\n"
 "The DMX address to use. e.g. spidev0.1-0-dmx-address = 1\n"
 "\n"
+"<device>-<port>-device-label = <string>\n"
+"The RDM device label to use.\n"
+"\n"
 "<device>-<port>-personality = <int>\n"
 "The RDM personality to use.\n"
 "\n"
